Updated download_fh and donwload_wgi_voice_and_accountability to use the latest versions of the Freedom House data (to 2017) and WGI Voice and Accountability data (to 2016). Added a news file

--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -80,12 +80,12 @@
    doi = {10.1017/S0043887100016580}
 }
 
-@techreport{fh2017,
+@techreport{fh2018,
    author = {{Freedom House}},
-   title = {Freedom in the World 2017: Populists and Autocrats: The Dual Threat to Global Democracy},
+   title = {Freedom in the World 2018: Democracy in Crisis},
    institution = {Freedom House},
-   url = {https://freedomhouse.org/sites/default/files/FH_FIW_2017_Report_Final.pdf},
-   year = {2017}
+   url = {https://freedomhouse.org/sites/default/files/FH_FITW_Report_2018_Final_SinglePage.pdf},
+   year = {2018}
 }
 
 @article{gwf2014,
@@ -382,11 +382,11 @@ Mechkova, and Farhad Miri},
    url = {http://oefresearch.org/datasets/reign}
 }
 
-@misc{wgi2016,
+@misc{wgi2017,
    author = {Kaufmann, Daniel and Kraay, Aart},
    title = {Worldwide Governance Indicators},
    publisher = {The World Bank Research Group},
-   year = {2016},
+   year = {2017},
    url = {http://www.govindicators.org}
 }
 
