--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -397,4 +397,11 @@ Mechkova, and Farhad Miri},
    url = {http://github.com/xmarquez/democracyData}
 }
 
+@techreport{eiu2018,
+   author = {{The Economist Intelligence Unit}},
+   title = {Democracy Index 2017: Free Speech under Attack},
+   institution = {{The Economist Intelligence Unit}},
+   year = {2018}
+}
+
 
