Added eiu to the generate_democracy_scores_dataset, updated bmr to version 3.0, fixed a bug with country_year_coder not recognizing "Sudan, South" as "South Sudan".

--- a/data-raw/Producing a consistent country code table.Rmd
+++ b/data-raw/Producing a consistent country code table.Rmd
@@ -388,6 +388,11 @@ data <- data %>% select(ends_with("country_name"),
                         regex, 
                         lat, lon, everything())
 
+# Ad hoc fix for South Sudan regex
+
+data <- data %>% 
+  mutate(regex = ifelse(extended_country_name == "South Sudan", "\\bs\\w*.?sudan|sudan, south", regex))
+
 devtools::use_data(data, internal = TRUE, overwrite = TRUE)
 ```
 
