Adds the Ankcar and Fredriksson (2018) and SVMDI (Grundler and Krieger 2018) datasets; fixes REIGN problems.

--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -17,6 +17,17 @@
    year = {1991}
 }
 
+@article{AnckarFredriksson2018,
+   author = {Anckar, Carsten and Fredriksson, Cecilia},
+   title = {Classifying political regimes 1800-2016: a typology and a new dataset},
+   journal = {European Political Science},
+   DOI = {10.1057/s41304-018-0149-8},
+   url = {https://doi.org/10.1057/s41304-018-0149-8},
+   year = {2018},
+   type = {Journal Article}
+}
+
+
 @article{blm2005,
    author = {Bowman, Kirk and Lehoucq, Fabrice and Mahoney, James},
    title = {Measuring Political Democracy: Case Expertise, Data Adequacy, and Central America},
@@ -403,5 +414,27 @@ Mechkova, and Farhad Miri},
    institution = {{The Economist Intelligence Unit}},
    year = {2018}
 }
+
+@article{svmdi2016,
+   author = {Gr\:undler, Klaus and Krieger, Tommy},
+   title = {Democracy and growth: Evidence from a machine learning indicator},
+   journal = {European Journal of Political Economy},
+   volume = {45},
+   pages = {85-107},
+   DOI = {https://doi.org/10.1016/j.ejpoleco.2016.05.005},
+   url = {http://www.sciencedirect.com/science/article/pii/S0176268016300222},
+   year = {2016},
+   type = {Journal Article}
+}
+
+@techreport{svmdi2018,
+   author = {Gr\:undler, Klaus and Krieger, Tommy},
+   title = {Machine Learning Indices, Political Institutions, and Economic Development},
+   institution = {CESifo Group Munich},
+   year = {2018},
+   type = {Report},
+   url = {https://www.cesifo-group.de/DocDL/cesifo1_wp6930.pdf}
+}
+
 
 
