Updated bibliographic information for FH, EIU, and WGI

--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -101,10 +101,10 @@
 
 @techreport{fh2020,
    author = {{Freedom House}},
-   title = {Freedom in the World 2020: A Leaderless Struggle For Democracy},
+   title = {Freedom in the World 2021: Democracy under Siege},
    institution = {Freedom House},
-   url = {https://freedomhouse.org/report/freedom-world/2020/leaderless-struggle-democracy},
-   year = {2020}
+   url = {https://freedomhouse.org/report/freedom-world/2021/democracy-under-siege},
+   year = {2021}
 }
 
 @article{gwf2014,
@@ -412,7 +412,7 @@ Mechkova, and Farhad Miri},
    author = {Kaufmann, Daniel and Kraay, Aart},
    title = {Worldwide Governance Indicators},
    publisher = {The World Bank Research Group},
-   year = {2019},
+   year = {2020},
    url = {http://www.govindicators.org}
 }
 
@@ -423,11 +423,11 @@ Mechkova, and Farhad Miri},
    url = {http://github.com/xmarquez/democracyData}
 }
 
-@techreport{eiu2020,
+@techreport{eiu2021,
    author = {{The Economist Intelligence Unit}},
-   title = {Democracy Index 2019: A year of democratic setbacks and popular protest},
+   title = {Democracy Index 2020: In sickness and in health?},
    institution = {{The Economist Intelligence Unit}},
-   year = {2020}
+   year = {2021}
 }
 
 @article{svmdi2016,
