--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -350,26 +350,21 @@
    url = {http://www.fsd.uta.fi/english/data/catalogue/FSD1289/meF1289e.html}
 }
 
-@MISC{vdem2016,
-  author = {Coppedge, Michael, and John Gerring, and Staffan I. Lindberg, and Svend-Erik Skaaning, and Jan Teorell,
-with David Altman, and Michael Bernhard, and M. Steven Fish, and Adam Glynn, and Allen Hicken, and Carl Henrik Knutsen, and Kelly
-McMann, and Pamela Paxton, and Daniel Pemstein, and Jeffrey Staton, and Brigitte Zimmerman, and Frida Andersson, and Valeriya
-Mechkova, and Farhad Miri},
-  title = {V-Dem Codebook v6},
-  year = {2016},
-  publisher = {Varieties of Democracy (V-Dem) Project}
+@Misc{vdem11dataset,
+  title = {{V-Dem Country-Year/Country-Date Dataset v11}},
+  author = {Michael Coppedge and John Gerring and Carl Henrik Knutsen and Staffan I. Lindberg and Jan Teorell and Nazifa Alizada and David Altman and Michael Bernhard and Agnes Cornell and M. Steven Fish and Lisa Gastaldi and Haakon Gjerl\o{}w and Adam Glynn and Allen Hicken and Garry Hindle and Nina Ilchenko and Joshua Krusell and Anna L\:uhrmann and Seraphine F. Maerz and Kyle L. Marquardt and Kelly McMann and Valeriya Mechkova and Juraj Medzihorsky and Pamela Paxton and Daniel Pemstein and Jose<U+FB01>ne Pernes and Johannes {von Römer} and Brigitte Seim and Rachel Sigman and Svend-Erik Skaaning and Jeffrey Staton and Aksel Sundström and Ei-tan Tzelgov and Yi-ting Wang and Tore Wig and Steven Wilson and Daniel Ziblatt.},
+  institution = {Varieties of Democracy (V-Dem) Project},
+  year = {2021},
+  url = {https://www.v-dem.net/en/data/data-version-11/},
 }
 
-@misc{vdem2016dataset,
-  author = {Coppedge, Michael, and John Gerring, and Staffan I. Lindberg, and Svend-Erik Skaaning, and Jan Teorell, and David Altman, and Michael Bernhard, and M. Steven Fish, and Adam Glynn, and Allen Hicken, and Carl Henrik Knutsen, and Kyle Marquardt, and Kelly McMann, and Farhad Miri, and Pamela Paxton, and Daniel Pemstein, and Jeffrey Staton, and Eitan Tzelgov, and Yi-ting Wang, and Brigitte Zimmerman},
-  year = {2016},
-  title = {V-Dem [Country-Year/Country-Date] Dataset, version 6.1},
-  version = {6.1},
-  type = {Dataset},
-  publisher = {Varieties of Democracy (V-Dem) Project},
-  url = {https://www.v-dem.net/en/data/data-version-6-1/}
+@Misc{vdem11codebook,
+  title = {{V-Dem Codebook v11}},
+  author = {Michael Coppedge and John Gerring and Carl Henrik Knutsen and Staffan I. Lindberg and Jan Teorell and David Altman and Michael Bernhard and Agnes Cornell and M. Steven Fish and Lisa Gastaldi and Haakon Gjerløw and Adam Glynn and Allen Hicken and Anna Lührmann and Seraphine F. Maerz and Kyle L. Marquardt and Kelly McMann and Valeriya Mechkova and Pamela Paxton and Daniel Pemstein and Johannes {von Römer} and Brigitte Seim and Rachel Sigman and Svend-Erik Skaaning and Jeffrey Staton and Aksel Sundtröm and Eitan Tzelgov and Luca Uberti and Yi-ting Wang and Tore Wig and Daniel Ziblatt},
+  institution = {Varieties of Democracy (V-Dem) Project},
+  year = {2021},
+  url = {https://www.v-dem.net/en/data/data-version-11/},
 }
-
 @article{wahman_teorell_hadenius2007,
    author = {Hadenius, Axel and Teorell, Jan},
    title = {Pathways from Authoritarianism},
@@ -463,5 +458,31 @@ Mechkova, and Farhad Miri},
    url = {https://www.cesifo-group.de/DocDL/cesifo1_wp6930.pdf}
 }
 
+@article{anrr2019,
+   author = {Acemoglu, Daron and Naidu, Suresh and Restrepo, Pascual and Robinson, James A.},
+   title = {Democracy Does Cause Growth},
+   journal = {Journal of Political Economy},
+   volume = {127},
+   number = {1},
+   pages = {47-100},
+   DOI = {10.1086/700936},
+   year = {2019}
+}
 
+@article{svmdi2021,
+   author = {Gr\"{u}ndler, Klaus and Krieger, Tommy},
+   title = {Using Machine Learning for measuring democracy: A practitioners guide and a new updated dataset for 186 countries from 1919 to 2019},
+   journal = {European Journal of Political Economy},
+   pages = {102-47},
+   DOI = {https://doi.org/10.1016/j.ejpoleco.2021.102047},
+   year = {2021}
+}
 
+@article{extended_uds_marquez,
+   author = {Marquez, Xavier},
+   title = {A Quick Method for Extending the Unified Democracy Scores},
+   journal = {Available at SSRN 2753830},
+   year = {2016},
+   type = {Journal Article},
+   url = {https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2753830}
+}
