Minor update to article

--- a/vignettes/articles/Relationships_between_democracy_measures.Rmd
+++ b/vignettes/articles/Relationships_between_democracy_measures.Rmd
@@ -130,7 +130,7 @@ dichotomous %>%
 
 Nevertheless, a few of these measures are poorly correlated with the rest, in particular, the [PIPE](../../reference/PIPE.html) [@PIPE2013] and [bnr](../../reference/bnr.html) [@bnr2001] measures. The [PIPE](../../reference/PIPE.html) measure of democracy is likely not properly constructed; there are no clear instructions for replicating it in the original documentation, and I can't be sure I succeeded in replicating it. 
 
-The [bnr](../../reference/bnr.html) measure is different from most other dichotomous measures of democracy because it was constructed with survival analysis in mind, and hence only includes democracies; when extended to non-democracies (in [bnr_extended](../../reference/bnr.html)) it is well-correlated with the rest. [utip](../../reference/utip.html) [@utip2008] and [doorenspleet](../../reference/doorenspleet.html) [@doorenspleet2000] also have below average correlations with the other measures; these are somewhat idiosyncratic measures that are not widely used, and doorenspleet in particular is based on [Polity](../../reference/polityIV.html) but adds an "inclusion" criterion, whereas most of the other dichotomous measures are based on [pacl](../../reference/pacl.html) [@pacl2010].
+The [bnr](../../reference/bnr.html) measure is different from most other dichotomous measures of democracy because it was constructed with survival analysis in mind, and hence only includes democracies; when extended to non-democracies (in [bnr_extended](../../reference/bnr.html)) it is well-correlated with the rest. [utip](../../reference/utip.html) [@utip2008] and [doorenspleet](../../reference/doorenspleet.html) [@doorenspleet2000] also have below average correlations with the other measures; these are somewhat idiosyncratic measures that are not widely used, and doorenspleet in particular is based on an earlier version of  [Polity](../../reference/polityIV.html) (Polity III) and also adds an "inclusion" criterion, whereas most of the other dichotomous measures are based on [pacl](../../reference/pacl.html) [@pacl2010].
 
 ## Trichotomous Measures of Democracy
 
